--- a/CallAPI/CallAPI.csproj
+++ b/CallAPI/CallAPI.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test1.cs" />
+    <Compile Include="test2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
